really bad html/css prototype

--- a/capitolwords_ng/frontend/capitolwords-spa/src/App.css
+++ b/capitolwords_ng/frontend/capitolwords-spa/src/App.css
@@ -1,7 +1,5 @@
 .App-container {
   margin: 0 auto;
-  padding: 32px 0;
-  width: 960px;
   min-height: 100%;
-  // background-color: #eee;
+  background-color: #151E25;
 }
